<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/choose_menu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Header"
        android:id="@+id/textView"
        android:background="#ffa90524"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:entries="@id/Guest_list" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Participants"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Cost"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:layout_marginLeft="88dp"
        android:layout_marginStart="88dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0 kr"
        android:id="@+id/textView9"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_alignTop="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Choose Menu"
        android:id="@+id/textView10"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:textStyle="bold"
        android:singleLine="false" />

    <EditText
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_toLeftOf="@+id/textView9"
        android:layout_toStartOf="@+id/textView9"
        android:id="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Starter"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton2"
        android:layout_below="@+id/textView12"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toLeftOf="@+id/imageButton3"
        android:layout_toStartOf="@+id/imageButton3" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton3"

        android:layout_alignTop="@+id/imageButton2"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignRight="@+id/textView11"
        android:layout_alignEnd="@+id/textView11" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_toLeftOf="@+id/spinner"
        android:layout_toStartOf="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Main"
        android:id="@+id/textView13"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton4"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_toLeftOf="@+id/imageButton2"
        android:layout_toStartOf="@+id/imageButton2" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton5"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_toRightOf="@+id/imageButton2"
        android:layout_alignRight="@+id/imageButton3"
        android:layout_alignEnd="@+id/imageButton3" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton6"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_toRightOf="@+id/imageButton4"
        android:layout_toLeftOf="@+id/imageButton5"
        android:layout_toStartOf="@+id/imageButton5" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton7"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_toRightOf="@+id/imageButton5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Dessert"
        android:id="@+id/textView14"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/imageButton4"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_alignStart="@+id/imageButton4" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton8"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_toLeftOf="@+id/imageButton9"
        android:layout_toStartOf="@+id/imageButton9" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton9"
        android:layout_below="@+id/textView14"
        android:layout_toRightOf="@+id/imageButton4"
        android:layout_toLeftOf="@+id/imageButton5"
        android:layout_toStartOf="@+id/imageButton5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:id="@+id/button2"
        android:layout_below="@+id/imageButton9"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:background="#ffad112b" />

</RelativeLayout>
